log/build_2026-05-21_10-42-12/sudsakhon_mainprogram/stderr.log
  File "/home/ubuntu/ros2_ws/install/sudsakhon_mainprogram/lib/python3.12/site-packages/sudsakhon_mainprogram/main_controller.py", line 345
    self.set_pid_gains(5, 1.0, 0.0, 1.0):
                                        ^
SyntaxError: invalid syntax

